05-dashboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: dashboard
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: websecure
  hostnames:
    - dashboard.k8s.noelmiller.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
